--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+    "url": "https://github.com/odahcam/bootify",
     "name": "bootify",
     "version": "1.0.0-beta",
     "author": "machado@odahcam.com"
