complete lib rename

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "url": "https://github.com/odahcam/bootify",
-    "name": "bootify",
+    "url": "https://github.com/odahcam/bootoast",
+    "name": "bootast",
     "version": "1.0.0-beta",
     "author": "machado@odahcam.com"
 }
