fixed package name

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "url": "https://github.com/odahcam/bootoast",
-    "name": "bootast",
-    "version": "1.0.0-beta",
+    "name": "bootoast",
+    "version": "1.0.0-beta2",
     "author": "machado@odahcam.com"
 }
