--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "url": "https://github.com/odahcam/bootoast",
     "name": "bootoast",
-    "version": "1.0.0-beta2",
+    "version": "1.0.0-rc1",
     "author": "machado@odahcam.com"
 }
