--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
         "type": "git",
         "url": "https://github.com/odahcam/bootoast/"
     },
+    "bugs": "https://github.com/odahcam/bootoast/issues/new"
     "name": "bootoast",
     "version": "1.0.1-beta.2",
     "author": "machado@odahcam.com"
