--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
     },
     "bugs": "https://github.com/odahcam/bootoast/issues/new",
     "name": "bootoast",
-    "version": "1.0.1-beta.2",
+    "version": "1.0.1",
     "author": "machado@odahcam.com"
 }
