--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-    "url": "https://github.com/odahcam/bootoast",
+    "url": "https://github.com/geniusventures/bootoast",
     "repository": {
         "type": "git",
-        "url": "https://github.com/odahcam/bootoast/"
+        "url": "https://github.com/geniusventures/bootoast/"
     },
-    "bugs": "https://github.com/odahcam/bootoast/issues/new",
+    "bugs": "https://github.com/geniusventures/bootoast/issues/new",
     "name": "bootoast",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "author": "machado@odahcam.com"
 }
